# super-agent-party

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_ZH.md  entitlements.mac.plist  index.html  install.bat  install.sh  install_cnpm.bat  main.js  multiprocess_worker.py  package-lock.json  package.json  pyproject.toml  qq_bot_manager.py  renderer.js  requirements.txt  server.py  server.spec  settings.json  start.bat  start_with_dev.bat  start_with_dev.sh  styles.css
.github/workflows/: build.yml  docker-publish.yml  release.yml
config/: locales.json  settings_template.json  system_settings.json
css/: styles.css
doc/: github-release-guide.md  install_config.md  install_config_ZH.md
js/: locales.js  main.js  preload.js  renderer.js
py/: a2a_tool.py  agent_tool.py  browser.py  code_interpreter.py  comfyui_tool.py  custom_http.py  get_setting.py  image_host.py  know_base.py  llm_tool.py  load_files.py  mcp_clients.py  pollinations.py  qq_bot_manager.py  web_search.py
static/: index.html  loading.html  skeleton.html  vrm.html
static/css/: css2.css  styles-advance.css  styles.css  transition.css
static/fbx/: Dance.fbx  Idle.fbx  Walking.fbx
static/js/: bundle.min.js  fbxmanager.js  locales.js  preload.js  renderer.js  vrm.js  vrmUtil.js  vue_data.js  vue_methods.js
test/: test.py  test2.py
