[project]
name = "super-agent-party"
version = "v0.1.1"
description = "超级智能体派对 | 链接一切模型、知识库、搜索引擎、MCP服务器、A2A服务器；可以web端、桌面端、API等多种方式使用"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "aisuite[all]>=0.1.11",
    "bs4>=0.0.2",
    "docstring-parser>=0.16",
    "duckduckgo-search>=8.0.1",
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.12",
    "langchain-community>=0.3.22",
    "langchain-ollama>=0.3.2",
    "langchain-openai>=0.3.14",
    "mcp>=1.6.0",
    "nest-asyncio>=1.6.0",
    "odfpy>=1.4.1",
    "openai>=1.76.0",
    "openpyxl>=3.1.5",
    "portalocker>=3.1.1",
    "pyinstaller>=6.13.0",
    "pypdf2>=3.0.1",
    "python-a2a[all]==0.3.0",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "pywin32>=310 ; sys_platform == 'win32'",
    "requests>=2.32.3",
    "shortuuid>=1.0.13",
    "striprtf>=0.0.29",
    "tavily-python>=0.7.0",
    "tzlocal>=5.3.1",
    "uvicorn[standard]>=0.34.2",
]
